--- a/src/components/Panel/ArrowDOWN/ArrowDOWN.module.scss
+++ b/src/components/Panel/ArrowDOWN/ArrowDOWN.module.scss
@@ -1,5 +1,5 @@
 .arrowContainer {
-    margin-bottom: -1rem;
+    margin-top: 1rem;
     height: 60%;
     width: 60%;
     overflow: hidden;
@@ -12,6 +12,5 @@
     height: 100%;
     width: 100%;
     background-color: #cbd6d8;
-    transform: rotate(45deg) translate(-50%,-50%);
-    // transform: translate(0%,50%);
+    transform: rotate(45deg) translate(-55%,-55%);
 }
