--- a/src/components/Elevator/ElevatorShaft/ElevatorShaft.module.scss
+++ b/src/components/Elevator/ElevatorShaft/ElevatorShaft.module.scss
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     grid-template-columns: 1fr repeat(var(--elevators-amount),  10rem 1fr) ;
+    padding-bottom: 2rem;
 }
 
 .elevatatorShaft {
@@ -16,5 +17,5 @@
 
     display: flex;
     align-items: flex-end;
-    padding-bottom: 2rem;
+    // padding-bottom: 2rem;
 }
