--- a/src/components/Building/Building.module.scss
+++ b/src/components/Building/Building.module.scss
@@ -1,16 +1,13 @@
 .buildingContainer {
-    // min-height: 100vh;
-    // max-height: 100%;
+    // min-height: calc(100vh - 8rem);
+    min-height: 100vh;
+    padding-bottom: 7rem;
+    padding-top: 7rem;
+    max-height: 100%;
     position: relative;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-}
-.diplaysHeader {
     background-color: #95AAB5;
-    display: grid;
-    grid-template-columns: 1fr repeat(var(--elevators-amount),  10rem 1fr) ;
-    align-content: center;
-    justify-content: center;
 }
