--- a/src/components/Display/DisplayHeader/DisplayHeader.module.scss
+++ b/src/components/Display/DisplayHeader/DisplayHeader.module.scss
@@ -1,8 +1,14 @@
 .diplayHeader {
+    position: fixed;
+    top: 0;
+    z-index: 200;
+    width: 100%;
     background-color: #95AAB5;
+    border-bottom: 2px solid #5E6D7A;
     display: grid;
     grid-template-columns: 1fr repeat(var(--elevators-amount),  10rem 1fr) ;
-    align-content: center;
+    align-content: flex-start;
     justify-content: center;
     padding: 1rem 0rem;
+    
 }
