--- a/src/components/Floor/Floor.module.scss
+++ b/src/components/Floor/Floor.module.scss
@@ -21,3 +21,10 @@
     justify-content: center;
     align-items: center;
 }
+
+.numFloor {
+    margin-right: 2rem;
+    font-size: 4rem;
+    font-weight: 900;
+    color: #5E6D7A;
+}
