--- a/src/components/Panel/AdminPanelFooter/AdminPanelFooter.module.scss
+++ b/src/components/Panel/AdminPanelFooter/AdminPanelFooter.module.scss
@@ -1,5 +1,7 @@
 .queueFooter {
-    height: 8rem;
+    position: fixed;
+    bottom: 0;
+    height: 9rem;
     width: 100vw;
     display: flex;
     background-color: #5E6D7A;
@@ -9,11 +11,12 @@
     color: #DFE0E4;
 
     align-items: flex-end;
-    padding: 0 2rem 1rem 2rem;
+    padding: 1rem 2rem 1rem 2rem;
+    z-index: 200;
 }
 
 .displayContainer {
-    width: 50%;
+    width: 40%;
     margin: 0rem 1rem;
 }
 
